tests/fail/parse/unexpected-character.fathom
//~ exit-code = 1

ğŸ¥¸
